Add rethinkdb-latest redirects

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,4 +7,7 @@ server {
     root /srv/www/download.rethinkdb.com/public_html;
     index index.html index.htm;
     autoindex	on;
+
+    rewrite ^/dist/rethinkdb-latest.tgz /dist/rethinkdb-1.7.0.tgz redirect;
+    rewrite ^/osx/rethinkdb-latest.dmg /osx/rethinkdb-1.7.0.dmg redirect;
 }
