--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,6 @@ server {
     index index.html index.htm;
     autoindex	on;
 
-    rewrite ^/dist/rethinkdb-latest.tgz /dist/rethinkdb-1.15.3.tgz redirect;
+    rewrite ^/dist/rethinkdb-latest.tgz /dist/rethinkdb-1.15.3-1.tgz redirect;
     rewrite ^/osx/rethinkdb-latest.dmg /osx/rethinkdb-1.15.3-1.dmg redirect;
 }
