--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "apt-repo/freight"]
 	path = apt-repo/freight
-	url = https://github.com/rcrowley/freight
+	url = https://github.com/atnnn/freight
