--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,6 @@ server {
     index index.html index.htm;
     autoindex	on;
 
-    rewrite ^/dist/rethinkdb-latest.tgz /dist/rethinkdb-2.1.0-1.tgz redirect;
-    rewrite ^/osx/rethinkdb-latest.dmg /osx/rethinkdb-2.1.0-1.dmg redirect;
+    rewrite ^/dist/rethinkdb-latest.tgz /dist/rethinkdb-2.1.1.tgz redirect;
+    rewrite ^/osx/rethinkdb-latest.dmg /osx/rethinkdb-2.1.1.dmg redirect;
 }
