--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,6 @@ server {
     index index.html index.htm;
     autoindex	on;
 
-    rewrite ^/dist/rethinkdb-latest.tgz /dist/rethinkdb-2.1.5-2.tgz redirect;
-    rewrite ^/osx/rethinkdb-latest.dmg /osx/rethinkdb-2.1.5-2.dmg redirect;
+    rewrite ^/dist/rethinkdb-latest.tgz /dist/rethinkdb-2.2.0.tgz redirect;
+    rewrite ^/osx/rethinkdb-latest.dmg /osx/rethinkdb-2.2.0.dmg redirect;
 }
