--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,18 @@
 server {
-    server_name download.rethinkdb.com
+    server_name download.rethinkdb.com;
     
     listen 80;
-    listen 443 ssl http2
+    listen 443 ssl http2;
     
     ssl_certificate /etc/ssl/rethinkdb-bundle/rethinkdb-ssl-bundle.crt;
-    ssl_certificate_key /etc/ssl/rethinkdb-bundle/rethinkdb.key
+    ssl_certificate_key /etc/ssl/rethinkdb-bundle/rethinkdb.key;
     
     access_log /srv/www/download.rethinkdb.com/logs/access.log;
-    error_log /srv/www/download.rethinkdb.com/logs/error.log warn
+    error_log /srv/www/download.rethinkdb.com/logs/error.log warn;
     
     root /srv/www/download.rethinkdb.com/public_html;
     index index.html index.htm;
-    autoindex	on
+    autoindex   on;
     
     rewrite ^/dist/rethinkdb-latest.tgz /dist/rethinkdb-2.3.6.tgz redirect;
     rewrite ^/osx/rethinkdb-latest.dmg /osx/rethinkdb-2.3.6.dmg redirect;
