--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,49 @@
 server {
-    server_name download.rethinkdb.com;
-    
     listen 80;
+    listen [::]:80;
+    server_name download2.rethinkdb.com;
+    return 301 https://download2.rethinkdb.com$request_uri;
+}
+
+server {
     listen 443 ssl http2;
-    
-    ssl_certificate /etc/ssl/rethinkdb-bundle/rethinkdb-ssl-bundle.crt;
-    ssl_certificate_key /etc/ssl/rethinkdb-bundle/rethinkdb.key;
-    
-    access_log /srv/www/download.rethinkdb.com/logs/access.log;
-    error_log /srv/www/download.rethinkdb.com/logs/error.log warn;
-    
-    root /srv/www/download.rethinkdb.com/public_html;
-    index index.html index.htm;
-    autoindex   on;
-    
+
+    autoindex on;
+    root /var/www/download.rethinkdb.com/public_html;
+    index index.html;
+
+    server_name download2.rethinkdb.com;
+
+    location / {
+        try_files $uri $uri/ =404;
+    }
+
+    access_log /var/www/download.rethinkdb.com/logs/access.log;
+    error_log /var/www/download.rethinkdb.com/logs/error.log warn;
+
+    ssl on;
+
+    ssl_certificate /etc/letsencrypt/live/download2.rethinkdb.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/download2.rethinkdb.com/privkey.pem; # managed by Certbot
+
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:20m;
+    ssl_session_tickets off;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+
+    ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK';
+
+    ssl_stapling on;
+    ssl_stapling_verify on;
+
+    proxy_set_header    Host              $host;
+    proxy_set_header    X-Real-IP         $remote_addr;
+    proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header    X-Forwarded-SSL on;
+    proxy_set_header    X-Forwarded-Proto $scheme;
+
     rewrite ^/dist/rethinkdb-latest.tgz /dist/rethinkdb-2.3.6.tgz redirect;
     rewrite ^/osx/rethinkdb-latest.dmg /osx/rethinkdb-2.3.6.dmg redirect;
 }
