--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name download2.rethinkdb.com;
-    return 301 https://download2.rethinkdb.com$request_uri;
+    server_name download.rethinkdb.com;
+    return 301 https://download.rethinkdb.com$request_uri;
 }
 
 server {
@@ -12,7 +12,7 @@ server {
     root /var/www/download.rethinkdb.com/public_html;
     index index.html;
 
-    server_name download2.rethinkdb.com;
+    server_name download.rethinkdb.com;
 
     location / {
         try_files $uri $uri/ =404;
@@ -23,8 +23,8 @@ server {
 
     ssl on;
 
-    ssl_certificate /etc/letsencrypt/live/download2.rethinkdb.com/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/download2.rethinkdb.com/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/download.rethinkdb.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/download.rethinkdb.com/privkey.pem; # managed by Certbot
 
     ssl_session_timeout 1d;
     ssl_session_cache shared:SSL:20m;
